# dcop_generator_pdcdcop

./: .gitignore  .name  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.txt
grid-weather_x14_y6_dx8_dy8/: instance_0_x14_y6_dx8_dy8.dzn  instance_10_x14_y6_dx8_dy8.dzn  instance_11_x14_y6_dx8_dy8.dzn  instance_12_x14_y6_dx8_dy8.dzn  instance_13_x14_y6_dx8_dy8.dzn  instance_14_x14_y6_dx8_dy8.dzn  instance_15_x14_y6_dx8_dy8.dzn  instance_16_x14_y6_dx8_dy8.dzn  instance_17_x14_y6_dx8_dy8.dzn  instance_18_x14_y6_dx8_dy8.dzn  instance_19_x14_y6_dx8_dy8.dzn  instance_1_x14_y6_dx8_dy8.dzn  instance_20_x14_y6_dx8_dy8.dzn  instance_21_x14_y6_dx8_dy8.dzn  instance_22_x14_y6_dx8_dy8.dzn  instance_23_x14_y6_dx8_dy8.dzn  instance_24_x14_y6_dx8_dy8.dzn  instance_25_x14_y6_dx8_dy8.dzn  instance_26_x14_y6_dx8_dy8.dzn  instance_27_x14_y6_dx8_dy8.dzn  instance_28_x14_y6_dx8_dy8.dzn  instance_29_x14_y6_dx8_dy8.dzn  instance_2_x14_y6_dx8_dy8.dzn  instance_30_x14_y6_dx8_dy8.dzn  instance_31_x14_y6_dx8_dy8.dzn  instance_32_x14_y6_dx8_dy8.dzn  instance_33_x14_y6_dx8_dy8.dzn  instance_34_x14_y6_dx8_dy8.dzn  instance_35_x14_y6_dx8_dy8.dzn  instance_36_x14_y6_dx8_dy8.dzn  instance_37_x14_y6_dx8_dy8.dzn  instance_38_x14_y6_dx8_dy8.dzn  instance_39_x14_y6_dx8_dy8.dzn  instance_3_x14_y6_dx8_dy8.dzn  instance_40_x14_y6_dx8_dy8.dzn  instance_41_x14_y6_dx8_dy8.dzn  instance_42_x14_y6_dx8_dy8.dzn  instance_43_x14_y6_dx8_dy8.dzn  instance_44_x14_y6_dx8_dy8.dzn  instance_45_x14_y6_dx8_dy8.dzn  (+10 more)
grid-weather_x16_y7_dx8_dy8/: instance_0_x16_y7_dx8_dy8.dzn  instance_10_x16_y7_dx8_dy8.dzn  instance_11_x16_y7_dx8_dy8.dzn  instance_12_x16_y7_dx8_dy8.dzn  instance_13_x16_y7_dx8_dy8.dzn  instance_14_x16_y7_dx8_dy8.dzn  instance_15_x16_y7_dx8_dy8.dzn  instance_16_x16_y7_dx8_dy8.dzn  instance_17_x16_y7_dx8_dy8.dzn  instance_18_x16_y7_dx8_dy8.dzn  instance_19_x16_y7_dx8_dy8.dzn  instance_1_x16_y7_dx8_dy8.dzn  instance_20_x16_y7_dx8_dy8.dzn  instance_21_x16_y7_dx8_dy8.dzn  instance_22_x16_y7_dx8_dy8.dzn  instance_23_x16_y7_dx8_dy8.dzn  instance_24_x16_y7_dx8_dy8.dzn  instance_25_x16_y7_dx8_dy8.dzn  instance_26_x16_y7_dx8_dy8.dzn  instance_27_x16_y7_dx8_dy8.dzn  instance_28_x16_y7_dx8_dy8.dzn  instance_29_x16_y7_dx8_dy8.dzn  instance_2_x16_y7_dx8_dy8.dzn  instance_30_x16_y7_dx8_dy8.dzn  instance_31_x16_y7_dx8_dy8.dzn  (+25 more)
src/: main.cpp
(+152 files in other folders)
